--- a/WarEffortUS/index.html
+++ b/WarEffortUS/index.html
@@ -36,7 +36,7 @@
   <body style="background-color:black;">
     <div id="elmMain"></div>
 
-    <script src="wareffort.js"></script>
+    <script src="wareffort.min.js"></script>
     <script>
       var app = Elm.Main.init({
         node: document.getElementById("elmMain")
