Updated data and page layout.

--- a/WarEffortUS/index.html
+++ b/WarEffortUS/index.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <title>
+      WoW Classic AQ War Effort Ranking
+    </title>
+
     <style>
         BODY	  { margin: 0px; }
         
@@ -36,7 +40,7 @@
   <body style="background-color:black;">
     <div id="elmMain"></div>
 
-    <script src="wareffort.min.js"></script>
+    <script src="wareffort.js"></script>
     <script>
       var app = Elm.Main.init({
         node: document.getElementById("elmMain")
